--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>com.rocana</groupId>
   <artifactId>rocana-transform-action-plugin</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 
   <licenses>
     <license>
@@ -82,7 +82,7 @@
     <dependency>
       <groupId>com.rocana</groupId>
       <artifactId>rocana-core</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.3</version>
       <scope>provided</scope>
     </dependency>
 
@@ -93,7 +93,7 @@
     <dependency>
       <groupId>com.rocana</groupId>
       <artifactId>rocana-transform</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.3</version>
       <scope>provided</scope>
     </dependency>
 
