--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-  ~ Copyright (c) 2015 Rocana.
+  ~ Copyright (c) 2017 Rocana.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -23,8 +23,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.rocana</groupId>
-  <artifactId>rocana-transform-action-plugin</artifactId>
-  <version>1.1.0</version>
+  <artifactId>rocana-metric-load-gen</artifactId>
+  <version>1.0.0</version>
 
   <licenses>
     <license>
@@ -35,8 +35,8 @@
 
   <properties>
     <!-- Dependency versions -->
-    <version.rocana>1.2.3</version.rocana>
-    <version.rocana-configuration>1.0.1</version.rocana-configuration>
+    <version.rocana>2.0.2</version.rocana>
+    <version.rocana-configuration>1.2.0</version.rocana-configuration>
     <version.slf4j>1.7.5</version.slf4j>
     <version.guava>15.0</version.guava>
     <version.junit>4.11</version.junit>
